--- a/frontend/src/pages/TradesmanDashboard/TradesmanDashboard.module.css
+++ b/frontend/src/pages/TradesmanDashboard/TradesmanDashboard.module.css
@@ -24,8 +24,8 @@ p {
 }
 
 .threeColumns section {
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: #faf7ed;
+    border: 2px solid #ebe7d9;
     border-radius: 6px;
     padding: 15px;
     min-height: 300px;
