--- a/frontend/src/pages/CustomerDashboard/CustomerDashboard.module.css
+++ b/frontend/src/pages/CustomerDashboard/CustomerDashboard.module.css
@@ -7,14 +7,13 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.dashboard > button {
-    display: block;
-    margin: 0 auto 20px auto;
+h2 {
+    margin: 20px 0 20px;
+    color: #ffffff;
 }
 
-h2 {
-    margin: 40px 0 20px;
-    color: #ffffff;
+.description {
+    width: 400px;
 }
 
 
