--- a/frontend/src/components/MenuBar/MenuBar.module.css
+++ b/frontend/src/components/MenuBar/MenuBar.module.css
@@ -8,9 +8,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    padding: 0 40px 5px;
     z-index: 1000;
-    border-bottom: 2px solid #064b75;
+    border-bottom: 4px solid #064b75;
 }
 
 .logoSection img {
